test/cherry/Language/float32_list_int_literal_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  var values: Float32[2] = [1, 2];

  0
}

# CHECK: error: type mismatch
